--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "custom-id": "^1.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.17",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
