--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src",
-    "dev": "nodemon src --ignore public/"
+    "start": "node -r dotenv/config src",
+    "dev": "nodemon -r dotenv/config src --ignore public/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "custom-id": "^1.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.17",
     "socket.io": "^2.3.0"
