--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node -r dotenv/config src",
+    "start": "node src",
     "dev": "nodemon -r dotenv/config src --ignore public/"
   },
   "keywords": [],
